Add concurrency test and verify overselling protection

--- a/flash-sale-api/.gitignore
+++ b/flash-sale-api/.gitignore
@@ -27,3 +27,7 @@ extract_pdf_zlib.py
 extract_pdf.py 
 the plan .txt
 Gmail - Laravel Coding Challenge – Next Step with GetPayIn.pdf
+concurrency_test_small.py
+concurrency_test.py
+test_results.txt
+
